apps/monitoring/uptime-kuma/autokuma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autokuma
  namespace: monitoring
  labels:
    app: autokuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autokuma
  template:
    metadata:
      labels:
        app: autokuma
    spec:
      serviceAccountName: autokuma
      containers:
        - name: autokuma
          image: ghcr.io/bigboot/autokuma:latest
