apps/monitoring/uptime-kuma/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime-kuma.kube.hexie.dev`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    certResolver: cloudflare
